--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,142 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+    /*scroll-behavior: smooth;*/
+    scrollbar-gutter: stable;
+    /*--100w: 171.52vh;*/
+    --100w: min(181vh, 98vw);
+    --1w: calc(var(--100w) / 12);
+    font-size: calc(var(--1w) * 0.35820895656);
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    text-decoration: none;
+    color: inherit;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+ul {
+    list-style: none;
+}
+
+button {
+    cursor: pointer;
+    outline: none;
+    background: none;
+    color: inherit;
+    border: none;
+}
+
+body {
+    color: white;
+    background-image: url('/background.png');
+    /*--1w: min(1.40937vh, 1.09248vw);*/
+    /*--100w: min(140.93686vh, 91.53439vw);*/
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-grid {
+    display: grid;
+    grid-template-columns: repeat(12, var(--1w));
+    width: var(--100w);
+}
+
+.heading1 {
+    font-size: 2.3125rem;
+    letter-spacing: 0.01rem;
+    line-height: 2.38rem;
+    font-weight: 1000;
+    font-family: var(--font-motcerrat);
+    text-transform: uppercase;
+    font-style: italic;
+}
+
+.heading2 {
+    font-size: 1.56rem;
+    font-family: var(--font-motcerrat);
+    font-weight: 900;
+}
+
+.heading3 {
+    font-size: 0.75rem;
+    font-family: var(--font-inter);
+    font-weight: 500;
+}
+
+.heading4 {
+    font-family: var(--font-inter);
+    font-weight: 700;
+    font-size: 0.75rem;
+}
+
+.text1 {
+    font-size: 0.439rem;
+    font-family: var(--font-inter);
+    font-weight: 700;
+}
+
+.text2 {
+    font-size: 1rem;
+    font-family: var(--font-inter);
+    font-weight: 500;
+}
+
+.text3 {
+    font-size: 0.4375rem;
+    font-family: var(--font-inter);
+    font-weight: 500;
+}
+
+.text4 {
+    font-size: 0.46875rem;
+    font-family: var(--font-inter);
+    font-weight: 500;
+}
+
+.text5 {
+    font-size: 0.75rem;
+    font-family: var(--font-inter);
+    font-weight: 500;
+}
+
+.text5 {
+    font-size: 0.5625rem;
+    font-family: var(--font-inter);
+    font-weight: 500;
+}
+
+.text6 {
+    font-size: 0.75rem;
+    font-family: var(--font-inter);
+    font-weight: 700;
+}
+
+.text7 {
+    font-size: 0.4375rem;
+    font-family: var(--font-inter);
+    font-weight: 700;
+}
+
+.border-top {
+    border-top: 1px solid rgba(247, 247, 247, 0.75);
+}
+
+.border-bottom {
+    border-bottom: 1px solid rgba(247, 247, 247, 0.75);
+}
+
+.border-right {
+    border-right: 1px solid rgba(247, 247, 247, 0.75);
+}
+
+.border-left {
+    border-left: 1px solid rgba(247, 247, 247, 0.75);
 }
