--- a/src/app/page.css
+++ b/src/app/page.css
@@ -164,6 +164,7 @@
 
 .mainp-sec5-licenses-img {
     height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -200,5 +201,6 @@
 
 .mainp-sec6-reviews-img {
     height: 100%;
+    width: 100%;
     object-fit: cover;
 }
