--- a/src/app/about/page.css
+++ b/src/app/about/page.css
@@ -7,9 +7,7 @@
     margin-top: calc(var(--1w) * 0.38);
 }
 
-#divider2 {
-    position: absolute;
-    width: 100%;
+#divid2 {
     height: calc(var(--1w) * 0.6);
     border-top: 1px solid rgba(247, 247, 247, 0.75);
     border-right: 1px solid rgba(247, 247, 247, 0.75);
