--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -2,10 +2,12 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
-#map {
-    height: calc(var(--1w) * 5.5634329);
-    width: calc(var(--1w) * 10.0074627);
-    object-fit: cover;
+@media only screen and (max-width: 767px) {
+    #map-container {
+        display: flex;
+        flex-direction: column;
+    }
 }
