--- a/src/app/cases/cases.css
+++ b/src/app/cases/cases.css
@@ -4,15 +4,24 @@
 
 #casesp-container1 {
     position: relative;
-    margin-top: calc(var(--1w) * 0.38);
+    margin-top: calc(var(--1w) * 0.36);
 }
 
 #divid4 {
     height: calc(var(--1w) * 0.6);
-    border-top: 1px solid rgba(247, 247, 247, 0.75);
-    border-right: 1px solid rgba(247, 247, 247, 0.75);
 }
 
 #casesp-container1-text {
     padding-top: calc(var(--1w) * 0.35);
+}
+
+#casesp-btn {
+    margin-top: calc(var(--1w) * 0.33);
+}
+
+#casesp-container2 {
+    margin-top: calc(var(--1w) * 0.7);
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--1w) * 0.33);
 }
