--- a/src/app/contacts/page.css
+++ b/src/app/contacts/page.css
@@ -3,7 +3,11 @@
 }
 
 #contactsp-sec1-container {
+    margin-top: calc(var(--1w) * 0.36);
     border-top: 1px solid rgba(247, 247, 247, 0.75);
+    border-bottom: 1px solid rgba(247, 247, 247, 0.75);
+    padding-top: calc(var(--1w) * 0.16);
+    height: calc(var(--1w) * 4.4);
 }
 
 #contactsp-sec1-container-heading {
@@ -14,6 +18,11 @@
 #contactsp-map {
     grid-column-start: 5;
     grid-column-end: 13;
+    padding-left: calc(var(--1w) * 0.16);
+    padding-right: calc(var(--1w) * 0.16);
+    padding-top: calc(var(--1w) * 0.16);
+    padding-bottom: calc(var(--1w) * 0.16);
+    height: calc(var(--1w) * 4.23);
 }
 
 #contactsp-map-img {
@@ -35,8 +44,20 @@
 .contactsp-spec {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-top: calc(var(--1w) * 0.09);
+    padding-bottom: calc(var(--1w) * 0.09);
 }
 
-#contactsp-sec2, #contactsp-sec3 {
+.contactsp-spec > p {
+    padding-left: calc(var(--1w) * 0.15);
+}
+
+#contactsp-sec2 {
+    /*border-top: 1px solid rgba(247, 247, 247, 0.75);*/
+    margin-top: calc(var(--1w) * 0.2);
+}
+
+#contactsp-sec3 {
     border-top: 1px solid rgba(247, 247, 247, 0.75);
+    padding-top: calc(var(--1w) * 0.09);
 }
