--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,6 @@ main {
     align-items: center;
     width: 100%;
     border: 1px solid rgba(247, 247, 247, 0.75);
-    margin-top: calc(var(--1w) * 0.45);
     height: calc(var(--1w) * 0.55);
     border-radius: calc(var(--1w) * 0.016);
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
@@ -71,6 +70,8 @@ main {
     position: absolute;
     width: 100%;
     z-index: -1;
+    border-top: 1px solid rgba(247, 247, 247, 0.75);
+    border-right: 1px solid rgba(247, 247, 247, 0.75);
 }
 
 .border-top {
@@ -122,6 +123,14 @@ main {
     font-size: 0.4375rem
 }
 
+.fs9 {
+    font-size: 0.5rem
+}
+
+.fs10 {
+    font-size: 0.33333rem
+}
+
 .i-m {
     font-family: var(--font-inter);
     font-weight: 500
@@ -132,6 +141,11 @@ main {
     font-weight: 700
 }
 
+.i-r {
+    font-family: var(--font-inter);
+    font-weight: 400
+}
+
 .m-b {
     font-family: var(--font-montserrat);
     font-weight: 900
@@ -139,4 +153,22 @@ main {
 
 .up {
     text-transform: uppercase
+}
+
+@media only screen and (max-width: 767px) {
+    body {
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
+
+    .main-grid {
+        display: unset;
+        width: unset;
+    }
+
+    html {
+        /*--100h: min(181vh, 98vw);*/
+        --1h: 5.985915svh;
+        --1g: 2.347417svh
+    }
 }
