--- a/src/components/cart/6/cart6.css
+++ b/src/components/cart/6/cart6.css
@@ -1,20 +1,34 @@
 .cart6 {
-
+    border: 1px solid rgba(247, 247, 247, 0.75);
+    height: calc(var(--1w) * 2.37);
 }
 
 .cart6-heading {
     grid-column-start: 1;
     grid-column-end: 5;
+    padding-top: calc(var(--1w) * 0.17);
+    padding-left: calc(var(--1w) * 0.18);
+    padding-right: calc(var(--1w) * 0.6);
 }
 
 .cart6-value {
     grid-column-start: 5;
     grid-column-end: 9;
+    padding-top: calc(var(--1w) * 0.13);
+    padding-left: calc(var(--1w) * 0.18);
+    padding-right: calc(var(--1w) * 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: calc(var(--1w) * 2.37);
+    padding-bottom: calc(var(--1w) * 0.22);
 }
 
 .cart6-img {
     grid-column-start: 9;
     grid-column-end: 13;
+    height: calc(var(--1w) * 2.36);
+    border: 1px solid rgba(247, 247, 247, 0.75);
 }
 
 .cart6-img > img {
