--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -27,3 +27,11 @@ address {
     display: flex;
     gap: 0.2rem;
 }
+
+
+@media only screen and (max-width: 767px) {
+    #footer {
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+}
