--- a/src/app/page.css
+++ b/src/app/page.css
@@ -5,6 +5,9 @@
 
 #mainp-sec1-btn-container {
     display: none;
+    margin-top: 10.680749svh;
+    margin-bottom: 12.499998svh;
+    height: calc(var(--1h) / 2);
 }
 
 #mainp-sec1-btn {
@@ -224,10 +227,17 @@
         padding-left: 10px;
     }
 
+    #mainp-sec1-img {
+        height: 33.333328svh;
+    }
+
     #mainp-sec1-h {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        display: grid;
+        grid-template-rows: repeat(3, var(--1h));
+        gap: var(--1g);
+        margin-top: 8.333332svh;
+        height: 22.652579svh;
+        justify-content: center;
     }
 
     .br1 {
@@ -238,26 +248,68 @@
         height: unset;
         padding-right: 10px;
         padding-left: 10px;
+        margin-top: calc(var(--1g) / 2);
+    }
+
+    #mainp-sec2-heading {
+        height: var(--1h);
+        display: flex;
+        align-items: end;
+    }
+
+    #mainp-sec2-text-container {
+        margin-top: var(--1g);
+        height: 14.319247svh;
     }
 
     #mainp-sec2-carts {
         flex-direction: column;
         height: unset;
-        gap: var(--1g)
+        gap: var(--1g);
+        margin-top: var(--1g);
     }
 
     .mainp-sec2-carts-cart {
         width: unset;
+        height: 22.652579svh;
     }
 
     #mainp-sec3 {
         padding-right: 10px;
         padding-left: 10px;
+        margin-top: 10.680749svh;
+    }
+
+    #mainp-sec3-heading {
+        height: var(--1h);
+        display: flex;
+        align-items: end;
+    }
+
+    #mainp-sec3-block1 {
+        margin-top: var(--1g);
+        height: 22.652579svh;
+    }
+
+    #mainp-sec3-block2, #mainp-sec3-block3, #mainp-sec3-block4, #mainp-sec3-block5, #mainp-sec3-block6, #mainp-sec3-block7 {
+        margin-top: var(--1g);
+        height: 22.652579svh;
     }
 
     #mainp-sec4 {
         padding-right: 10px;
         padding-left: 10px;
+        margin-top: 10.680749svh;
+    }
+
+    #mainp-sec4-heading {
+        height: var(--1h);
+        display: flex;
+        align-items: end;
+    }
+
+    #map-container {
+        margin-top: var(--1g);
     }
 
     #mainp-sec5 {
