--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -29,18 +29,18 @@ header {
         margin-top: 1.173708svh;
         margin-bottom: var(--1g);
         height: var(--1h);
-        padding-right: 10px;
-        padding-left: 10px;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 70vw 1fr;
         grid-template-rows: 1fr 1fr;
         position: relative;
     }
 
     #logo {
-        height: 100%;
+        height: var(--1h);
         grid-column-start: 1;
         grid-column-end: 2;
+        padding-left: 10px;
+        z-index: 1;
     }
 
     #logo-img {
