--- a/src/components/mobileNavbar/mobileNavbar.css
+++ b/src/components/mobileNavbar/mobileNavbar.css
@@ -8,6 +8,9 @@
     align-items: end;
     position: absolute;
     width: 100%;
+    background: black;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 #navbar-block {
@@ -18,6 +21,10 @@
 .menu-container {
     grid-column-start: 2;
     grid-column-end: 3;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding-right: 10px;
 }
 
 .menu-toggle {
@@ -37,7 +44,7 @@
 .line {
     width: 100%;
     height: 5px;
-    background: #b482ff;
+    background: #FFFFFF;
     transition: all 0.3s ease;
     border-radius: 4px;
 }
@@ -52,6 +59,15 @@
 
 .menu-toggle:checked + .menu-button .line:nth-child(3) {
     transform: rotate(-45deg) translateY(-17px);
+}
+
+#header-back-layer {
+    position: absolute;
+    width: 100vw;
+    height: 7.2svh;
+    top: 0;
+    margin-top: -1.17371svh;
+    background: black;
 }
 
 
