--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,7 +25,12 @@ header {
 }
 
 @media only screen and (max-width: 767px) {
+    header {
+        width: 100%;
+    }
+
     #header {
+        width: 100%;
         margin-top: 1.173708svh;
         margin-bottom: var(--1g);
         height: var(--1h);
