--- a/src/components/mobileMap/mobileMap.css
+++ b/src/components/mobileMap/mobileMap.css
@@ -7,3 +7,9 @@
 #mobile-map-img {
     height: 23.8262875svh;
 }
+
+#mobile-map-carts .slick-dots {
+    font-size: 20px;
+    bottom: 10px;
+    color: white;
+}
