--- a/src/components/mobileNavbar/mobileNavbar.css
+++ b/src/components/mobileNavbar/mobileNavbar.css
@@ -11,6 +11,7 @@
     background: black;
     padding-right: 10px;
     padding-left: 10px;
+    height: 41.66666svh;
 }
 
 #navbar-block {
@@ -63,9 +64,10 @@
 
 #header-back-layer {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 7.2svh;
     top: 0;
+    left: 0;
     margin-top: -1.17371svh;
     background: black;
 }
