--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,6 +155,20 @@ main {
     text-transform: uppercase
 }
 
+.slick-dots > li > button:before, .slick-active > button:before {
+    content: "" !important;
+    z-index: 1;
+    width: 0.5rem;
+    height: 0.5rem;
+    background: transparent;
+    border: 2px solid #FFFFFF;
+    margin-top: calc(var(--1w) * 0.05);
+}
+
+.slick-active > button:before {
+    background: #D8282F !important;
+}
+
 @media only screen and (max-width: 767px) {
     body {
         max-width: 100vw;
