--- a/src/components/cart/2/cart2.css
+++ b/src/components/cart/2/cart2.css
@@ -12,3 +12,20 @@
     display: flex;
     gap: calc(var(--1w) * 0.1791);
 }
+
+
+@media only screen and (max-width: 767px) {
+    .cart2 {
+        height: 55.985907svh;
+        width: 100%;
+        grid-template-rows: 14.319247svh 41.66666svh;
+        row-gap: unset;
+        padding: unset;
+    }
+
+    .cart2-children {
+        padding-bottom: 1.8779342723svh;
+        display: flex;
+        justify-content: center;
+    }
+}
