--- a/src/components/mobileMap/mobileMap.css
+++ b/src/components/mobileMap/mobileMap.css
@@ -2,16 +2,22 @@
     height: 23.8262875svh;
     display: flex;
     justify-content: center;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 #mobile-map-img {
     height: 23.8262875svh;
+    object-fit: contain;
 }
 
 #mobile-map-carts .slick-dots {
     font-size: 20px;
     bottom: 10px;
     color: white;
+    position: unset;
+    margin-top: var(--1g);
+    height: var(--1h);
 }
 
 #mobile-map-carts .slick-list {
@@ -20,4 +26,8 @@
 
 #mobile-map-carts .slick-slide {
     height: 47.652575svh;
+}
+
+#mobile-map-carts {
+    margin-top: 9.5070405svh;
 }
