--- a/src/components/mobileMap/mobileMap.css
+++ b/src/components/mobileMap/mobileMap.css
@@ -2,13 +2,18 @@
     height: 23.8262875svh;
     display: flex;
     justify-content: center;
-    padding-right: 10px;
-    padding-left: 10px;
+    height: 23.8262875svh;
+    width: 43.4479588234svh;
+    position: relative;
 }
 
 #mobile-map-img {
     height: 23.8262875svh;
-    object-fit: contain;
+    width: 43.4479588234svh;
+}
+
+#mobile-map-carts {
+    width: 100%;
 }
 
 #mobile-map-carts .slick-dots {
@@ -33,49 +38,45 @@
 }
 
 #mpoint1 {
-    top: 6.6svh;
-    left: 3.5svh;
+    top: 27.5%;
+    left: 5.6%;
 }
 
 #mpoint2 {
-    top: 14.8svh;
-    left: 1.3svh;
+    top: 61%;
+    left: 0.6%;
 }
 
 #mpoint3 {
-    top: 11svh;
-    left: 7.1svh;
+    top: 45%;
+    left: 14%;
 }
 
 #mpoint4 {
-    top: 15.3svh;
-    left: 8svh;
+    top: 62.8%;
+    left: 15%;
 }
 
 #mpoint5 {
-    top: 15.3svh;
-    left: 14.5svh;
+    top: 62.8%;
+    left: 30.8%;
 }
 
 #mpoint6 {
-    top: 18.6svh;
-    left: 19.7svh;
+    top: 75%;
+    left: 41.5%;
 }
 
 #mpoint7 {
-    top: 4.7svh;
-    left: 24.7svh;
+    top: 18%;
+    left: 53%;
 }
 
 #mpoint8 {
-    top: 3svh;
-    left: 38.5svh;
+    top: 9.5%;
+    left: 86%;
 }
 
 .zoom-effect {
-    transition: transform 0.2s;
-}
-
-.zoom-effect {
-    transform: scale(2) translateY(-20%);
+    transform: scale(2) translateY(-17%) !important;
 }
