--- a/src/components/licensesSlider/licensesMobile.css
+++ b/src/components/licensesSlider/licensesMobile.css
@@ -17,6 +17,8 @@
 
 #mainp-sec5-licenses-mobile .slick-slide {
     height: 55.985907svh;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #mainp-sec5-licenses-mobile {
