--- a/src/app/contacts/page.css
+++ b/src/app/contacts/page.css
@@ -61,3 +61,14 @@
     border-top: 1px solid rgba(247, 247, 247, 0.75);
     padding-top: calc(var(--1w) * 0.09);
 }
+
+
+@media only screen and (max-width: 767px) {
+    #contactsp-sec1-container {
+        height: unset;
+    }
+
+    #contactsp-map {
+        height: 64.319239svh;
+    }
+}
