--- a/src/app/licenses/page.css
+++ b/src/app/licenses/page.css
@@ -40,3 +40,10 @@
 #licensesp-container2 {
     margin-top: calc(var(--1w) * 0.6);
 }
+
+
+@media only screen and (max-width: 767px) {
+    #licensesp-container2 {
+        display: none;
+    }
+}
