--- a/src/components/cart/3/cart3.css
+++ b/src/components/cart/3/cart3.css
@@ -57,4 +57,16 @@
     .cart3t1-children {
         height: 41.66666svh;
     }
+
+
+    .cart3t2 {
+        width: 100%;
+        display: grid;
+        grid-template-rows: 14.319247svh 41.66666svh;
+        row-gap: calc(var(--1w) * 0.1791044);
+        border-top: 1px solid rgba(247, 247, 247, 0.75);
+        border-right: 1px solid rgba(247, 247, 247, 0.75);
+        padding-top: calc(var(--1w) * 0.15);
+        padding-right: calc(var(--1w) * 0.3);
+    }
 }
