--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -14,6 +14,22 @@
     gap: calc(var(--1w) * 0.466);
 }
 
+.navbar-active-link {
+    border-bottom: 2px solid #FFFFFF;
+}
+
+#navbar-contactus {
+    border: 1px solid #FFFFFF;
+    padding-bottom: calc(var(--1w) * 0.024);
+    padding-right: calc(var(--1w) * 0.1);
+    padding-left: calc(var(--1w) * 0.1);
+}
+
+#navbar-contactus:hover {
+    border-color: #D8282F;
+    background-color: #D8282F;
+}
+
 @media only screen and (max-width: 767px) {
     #desktop-nav {
         display: none;
